force-app/main/default/objects/AccountBankInfo__c/AccountBankInfo__c.object-meta.xml
<CustomObject>
    <description>MDM 기존고객의 은행정보</description>
    <label>은행정보</label>
    <nameField>
        <label>Account Bank Info Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>