force-app/main/default/objects/AccountBankInfo__c/fields/PV_ACTCLOSED__c.field-meta.xml
<CustomField>
    <fullName>PV_ACTCLOSED__c</fullName>
    <label>PV_ACTCLOSED</label>
    <type>Date</type>
</CustomField>