force-app/main/default/objects/AccountBankInfo__c/fields/PV_ACTCLOSEYN__c.field-meta.xml
<CustomField>
    <fullName>PV_ACTCLOSEYN__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PV_ACTCLOSEYN</label>
    <type>Checkbox</type>
</CustomField>