force-app/main/default/objects/AccountBankInfo__c/fields/PV_BKONT__c.field-meta.xml
<CustomField>
    <fullName>PV_BKONT__c</fullName>
    <label>PV_BKONT</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>01-D</fullName>
                <label>가상계좌</label>
            </value>
            <value>
                <fullName>02-D</fullName>
                <label>점포 실물계좌</label>
            </value>
            <value>
                <fullName>03-D</fullName>
                <label>자금 지급계좌</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>