force-app/main/default/objects/AccountBankInfo__c/fields/PV_KOINH__c.field-meta.xml
<CustomField>
    <fullName>PV_KOINH__c</fullName>
    <label>PV_KOINH</label>
    <length>50</length>
    <type>Text</type>
</CustomField>