force-app/main/default/objects/AccountBankInfo__c/fields/PV_KUNNR__c.field-meta.xml
<CustomField>
    <fullName>PV_KUNNR__c</fullName>
    <label>PV_KUNNR</label>
    <length>10</length>
    <type>Text</type>
</CustomField>